[gd_scene load_steps=3 format=2]

[ext_resource path="res://Map Editor/Map Editor Theme.tres" type="Theme" id=1]
[ext_resource path="res://Map Editor/Statistics Panel/NationRow.gd" type="Script" id=2]

[node name="NationRow" type="HBoxContainer"]
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Name" type="Label" parent="."]
margin_bottom = 24.0

[node name="Tiles" type="Label" parent="."]
margin_left = 4.0
margin_right = 4.0
margin_bottom = 24.0
align = 2

[node name="Cities" type="Label" parent="."]
margin_left = 8.0
margin_right = 8.0
margin_bottom = 24.0
align = 2

[node name="Population" type="Label" parent="."]
margin_left = 12.0
margin_right = 12.0
margin_bottom = 24.0
align = 2

[node name="PopulationUrban" type="Label" parent="."]
margin_left = 16.0
margin_right = 16.0
margin_bottom = 24.0
align = 2

[node name="PopulationRural" type="Label" parent="."]
margin_left = 20.0
margin_right = 20.0
margin_bottom = 24.0
align = 2

[node name="IC" type="Label" parent="."]
margin_left = 24.0
margin_right = 24.0
margin_bottom = 24.0
align = 2

[node name="Food" type="Label" parent="."]
margin_left = 28.0
margin_right = 28.0
margin_bottom = 24.0
align = 2

[node name="Aluminium" type="Label" parent="."]
margin_left = 32.0
margin_right = 32.0
margin_bottom = 24.0
align = 2

[node name="Oil" type="Label" parent="."]
margin_left = 36.0
margin_right = 36.0
margin_bottom = 24.0
align = 2

[node name="Steel" type="Label" parent="."]
margin_left = 40.0
margin_right = 40.0
margin_bottom = 24.0
align = 2

[node name="Sulhpur" type="Label" parent="."]
margin_left = 44.0
margin_right = 44.0
margin_bottom = 24.0
align = 2
